assets/scss/layout/header/_header.scss
// =====================================================
// Header
// =====================================================

$header-background-color: $white !default;
$header-box-shadow: 0 5px 20px $base-box-shadow-color !default;

.nav-open {
    @include mb-down(md) {
        overflow-y: hidden;
    }
}

.header {
    position: sticky;
    top: 0;
    left: 0;
    width: 100%;
    background-color: $header-background-color;
    box-shadow: $header-box-shadow;
    z-index: 2;

    a {
        @include reset-link;
    }

    .container {
        @include mb-down(md) {
            padding: 0;
        }
    }
}

.header__inner {
    display: flex;
    justify-content: space-between;
}

@import 'logo';
@import 'navbar';
@import 'hamburger';

